#
# Test config with only git and github activated
#


# Config values format
#
# List: [val1, val2 ...]
# Int: int_value
# Int as string: "Int"
# List as string: "[val1, val2 ...]"
# String: string_value
# None: None, none
# Boolean: true, True, False, false

[general]
short_name = Iot
update = true
min_update_delay = 10
debug = true
# /var/log/mordred/
logs_dir = logs
# Number of items per bulk request to Elasticsearch
bulk_size = 100
# Number of items to get from Elasticsearch when scrolling
scroll_size = 100
menu_file = ./menu.yaml
aliases_file = ./aliases.json

[projects]
projects_file = ./projects.json

[es_collection]
url = https://admin:admin@localhost:9200

[es_enrichment]
url = https://admin:admin@localhost:9200

[sortinghat]
host = 127.0.0.1
user = root
password =
database = iot_sh
load_orgs = true
orgs_file = ./organizations.json
identities_api_token = 'xxxx'
identities_file = []
affiliate = true
# commonly: Unknown
unaffiliated_group = Unknown
autoprofile = [git,github]
matching = [email-name, username]
sleep_for = 120

[panels]
kibiter_time_from= "now-30y"
kibiter_default_index= "git"
kibiter_url = http://admin:admin@localhost:5601
community = true

[phases]
collection = true
identities = true
enrichment = true
panels = true

[git]
raw_index = git_iot_raw_14122019
enriched_index = git_iot_enriched_14122019
latest-items = true
category = commit
studies = [enrich_demography:git, enrich_areas_of_code:git, enrich_onion:git]

[github]
raw_index = github_issues_raw_iot_14122019
enriched_index = github_issues_iot_14122019
api-token = ...
sleep-for-rate = true
no-archive = true
category = issue
sleep-time = 300

[enrich_demography:git]
date_field = utc_commit
author_field = author_uuid

[enrich_areas_of_code:git]
in_index = git_iot_raw_14122019
out_index = git-aoc_iot_enriched_14122019

[enrich_onion:git]
in_index = git_iot_enriched_14122019
out_index = git-onion_iot_enriched_14122019
contribs_field = hash
no_incremental = false