[general]
short_name = Iot
update = true
min_update_delay = 60
debug = false
logs_dir = /home/bitergia/logs
aliases_file = /home/bitergia/conf/aliases.json

[projects]
projects_file = /home/bitergia/conf/projects.json

[es_collection]
url = http://elasticsearch:9200

[es_enrichment]
url = http://elasticsearch:9200
autorefresh = true

[sortinghat]
host = mariadb
user = root
password =
database = iot_sh
load_orgs = true
orgs_file = /home/bitergia/conf/organizations.json
identities_api_token = 'xxxx'
identities_file = []
affiliate = true
# commonly: Unknown
unaffiliated_group = Unknown
autoprofile = [git,github]
matching = [email-name, username]
sleep_for = 120

[panels]
kibiter_time_from = now-5y
kibiter_default_index = git
kibiter_url = http://kibiter:5601
kibiter_version = 6.1.4-1
community = true

[phases]
collection = true
identities = true
enrichment = true
panels = true

[git]
raw_index = git_iot_raw
enriched_index = git_iot_enriched
latest-items = true
category = commit
studies = [enrich_demography:git, enrich_areas_of_code:git, enrich_onion:git]

[github]
raw_index = github_issues_raw_iot
enriched_index = github_issues_iot
api-token = ...
sleep-for-rate = true
no-archive = true
category = issue
sleep-time = 300

[enrich_demography:git]
date_field = utc_commit
author_field = author_uuid

[enrich_areas_of_code:git]
in_index = git_iot_raw
out_index = git-aoc_iot_enriched

[enrich_onion:git]
in_index = git_iot_enriched
out_index = git-onion_iot_enriched
contribs_field = hash
no_incremental = false